--- a/index.html
+++ b/index.html
@@ -132,10 +132,16 @@
                     <a href="foodmenu.html">Menu</a>
                   </li>
                   <li>
-                    <a href="blog.html">Blog</a>
+                    <a href="gallery-1.html">Gallery</a>
                   </li>
-
                   <li>
+                    <a href="contact.html">Contact</a>
+                  </li>
+                  <!-- <li>
+                    <a href="blog.html">Blog</a>
+                  </li>-->
+
+                  <!-- <li>
                     <a href="#">Pages</a>
                     <ul>
                       <li>
@@ -167,13 +173,13 @@
                         <a href="coming-soon.html">Coming Soon</a>
                       </li>
                     </ul>
-                  </li>
-                  <li>
+                  </li> -->
+                  <!--  <li>
                     <a href="login.html">Login</a>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
-              <div class="mt-icons">
+              <!-- <div class="mt-icons">
                 <ul class="mti-list">
                   <li>
                     <span class="searchIcon">
@@ -200,54 +206,54 @@
                           <span class="lighter-text">Total:</span>
                           <span class="main-color-text total">$461.15</span>
                         </div>
-                      </div>
-                      <!--end shopping-cart-header -->
+                      </div> -->
+              <!--end shopping-cart-header -->
 
-                      <ul class="shopping-cart-items">
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
-                          <span class="item-name">XMREDTREE</span>
+              <!-- <ul class="shopping-cart-items">
+                <li>
+                  <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
+                  <span class="item-name">XMREDTREE</span>
 
-                          <span class="item-price">$49.50</span>
-                          <span class="item-quantity">Quantity: 01</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
+                  <span class="item-price">$49.50</span>
+                  <span class="item-quantity">Quantity: 01</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
 
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
-                          <span class="item-name">XMWHREIN</span>
+                <li>
+                  <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
+                  <span class="item-name">XMWHREIN</span>
 
-                          <span class="item-price">$34.06</span>
-                          <span class="item-quantity">Quantity: 10</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
+                  <span class="item-price">$34.06</span>
+                  <span class="item-quantity">Quantity: 10</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
 
-                        <li>
-                          <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
-                          <span class="item-name">XMJBRR</span>
+                <li>
+                  <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
+                  <span class="item-name">XMJBRR</span>
 
-                          <span class="item-price">$14.21</span>
-                          <span class="item-quantity">Quantity: 5</span>
-                          <span class="cartProduct-remove">
-                            <i class="fa fa-times" aria-hidden="true"></i>
-                          </span>
-                        </li>
-                      </ul>
+                  <span class="item-price">$14.21</span>
+                  <span class="item-quantity">Quantity: 5</span>
+                  <span class="cartProduct-remove">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                  </span>
+                </li>
+              </ul>
 
-                      <a href="#" class="button">Checkout</a>
-                    </div>
-                    <!--end shopping-cart -->
-                  </li>
-                </ul>
-              </div>
+              <a href="#" class="button">Checkout</a>
+            </div> -->
+              <!--end shopping-cart -->
+              </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </header>
 
