--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                   <li>
                     <a href="contact.html">Contact</a>
                   </li>
+                  <li>
+                    <a class="btn btn-primary" href="contact.html" role="button">Order Now</a>
+                  </li>
                   <!-- <li>
                     <a href="blog.html">Blog</a>
                   </li>-->
