--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Chicken Dum Biryani</h4>
+                                <p>Basmati rice, Biryani masala, Star anise</p>
                               </div>
                               <div class="dfsl-price">
                                 <h3><span>$</span>15.0</h3>
