--- a/index.html
+++ b/index.html
@@ -576,43 +576,43 @@
                             <div class="dft-single-list">
                               <div class="dftsl-text">
                                 <h4>Chicken Dum Biryani</h4>
-                                <p>Basmati rice, Biryani masala, Star anise</p>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>15.0</h3>
+                                <h3><span>$</span>10.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Chicken 65 Biryani</h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>20.0</h3>
+                                <h3><span>$</span>11.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Mutton Dum Biryani (Fri - Sun)</h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>10.0</h3>
+                                <h3><span>$</span>12.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Paneer Biryani</h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>12.0</h3>
+                                <h3><span>$</span>9.99</h3>
                               </div>
                             </div>
                           </li>
@@ -621,7 +621,7 @@
                     </div>
                     <div class="col-md-6">
                       <div class="dft-img">
-                        <img src="assets/img/food-menu/lunch-1.jpg" alt="" />
+                        <img src="assets/img/food-menu/Chicken.jpg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -634,44 +634,45 @@
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Samosa Chaat</h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>15.0</h3>
+                                <h3><span>$</span>6.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Bhel Puri</h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>20.0</h3>
+                                <h3><span>$</span>5.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Dahi Papdi chaat</h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>10.0</h3>
+                                <h3><span>$</span>6.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Chicken Everest Momos
+                                </h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>12.0</h3>
+                                <h3><span>$</span>9.99</h3>
                               </div>
                             </div>
                           </li>
@@ -680,7 +681,7 @@
                     </div>
                     <div class="col-md-6">
                       <div class="dft-img">
-                        <img src="assets/img/food-menu/dinner-1.jpg" alt="" />
+                        <img src="assets/img/food-menu/Papdi.jpg" alt="" />
                       </div>
                     </div>
                   </div>
@@ -693,44 +694,47 @@
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Rasamalai (4 Pcs)
+                                </h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>15.0</h3>
+                                <h3><span>$</span>4.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Gulab jamun (4 pcs)
+                                </h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>20.0</h3>
+                                <h3><span>$</span>3.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Puri curry (2 pcs)</h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>10.0</h3>
+                                <h3><span>$</span>8.99</h3>
                               </div>
                             </div>
                           </li>
                           <li>
                             <div class="dft-single-list">
                               <div class="dftsl-text">
-                                <h4>Bread barrel Kauntry Boy Brakfast</h4>
-                                <p>Bread recipes for snacks or breakfast.</p>
+                                <h4>Channa bhatura
+                                </h4>
+                                <!-- <p>Basmati rice, Biryani masala, Star anise</p> -->
                               </div>
                               <div class="dfsl-price">
-                                <h3><span>$</span>12.0</h3>
+                                <h3><span>$</span>8.99</h3>
                               </div>
                             </div>
                           </li>
@@ -831,13 +835,13 @@
               <div class="item">
                 <div class="single-food-box">
                   <div class="sfb-img">
-                    <img src="assets/img/food-menu/mpfood-1.jpg" alt="" />
+                    <img src="assets/img/food-menu/dosa.jpg" alt="" />
                     <div class="sfbi-btn">
-                      <a href="#" class="add-cart-btn">Add To Cart</a>
+                      <a href="#" class="add-cart-btn">Starts from</a>
                     </div>
                   </div>
                   <div class="sbf-info">
-                    <h4>Chicken Fried</h4>
+                    <h4>Dosa</h4>
                     <ul class="sbfi-ratings">
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
@@ -845,7 +849,7 @@
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                     </ul>
-                    <p class="price">$32.00</p>
+                    <p class="price">$7.99</p>
                   </div>
                 </div>
               </div>
@@ -1008,7 +1012,7 @@
   <!-- /Testimonial Area -->
 
   <!-- Blog Area -->
-  <section class="blog-area">
+  <!--  <section class="blog-area">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -1089,7 +1093,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- /Blog Area -->
 
   <!-- Booking Area -->
