--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                   <div class="sfb-img">
                     <img src="assets/img/food-menu/dosa.jpg" alt="" />
                     <div class="sfbi-btn">
-                      <a href="#" class="add-cart-btn">Starts from</a>
+                      <a href="#" class="add-cart-btn">Order Now</a>
                     </div>
                   </div>
                   <div class="sbf-info">
@@ -856,13 +856,13 @@
               <div class="item">
                 <div class="single-food-box">
                   <div class="sfb-img">
-                    <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
+                    <img src="assets/img/food-menu/Chicken.jpg" alt="" />
                     <div class="sfbi-btn">
-                      <a href="#" class="add-cart-btn">Add To Cart</a>
+                      <a href="#" class="add-cart-btn">Order Now</a>
                     </div>
                   </div>
                   <div class="sbf-info">
-                    <h4>Chicken Fried</h4>
+                    <h4>Chicken Dum Biryani</h4>
                     <ul class="sbfi-ratings">
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
@@ -870,20 +870,20 @@
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                     </ul>
-                    <p class="price">$20.00</p>
+                    <p class="price">$10.99</p>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="single-food-box">
                   <div class="sfb-img">
-                    <img src="assets/img/food-menu/mpfood-3.jpg" alt="" />
+                    <img src="assets/img/food-menu/Papdi.jpg" alt="" />
                     <div class="sfbi-btn">
-                      <a href="#" class="add-cart-btn">Add To Cart</a>
+                      <a href="#" class="add-cart-btn">Order Now</a>
                     </div>
                   </div>
                   <div class="sbf-info">
-                    <h4>Chicken Fried</h4>
+                    <h4>Samosa Chaat</h4>
                     <ul class="sbfi-ratings">
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
@@ -891,20 +891,20 @@
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                     </ul>
-                    <p class="price">$25.00</p>
+                    <p class="price">$6.99</p>
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="single-food-box">
                   <div class="sfb-img">
-                    <img src="assets/img/food-menu/mpfood-2.jpg" alt="" />
+                    <img src="assets/img/food-menu/rasmalai.jpg" alt="" />
                     <div class="sfbi-btn">
-                      <a href="#" class="add-cart-btn">Add To Cart</a>
+                      <a href="#" class="add-cart-btn">Order Now</a>
                     </div>
                   </div>
                   <div class="sbf-info">
-                    <h4>Chicken Fried</h4>
+                    <h4>Rasmalai 4(pcs)</h4>
                     <ul class="sbfi-ratings">
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
@@ -912,7 +912,7 @@
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                     </ul>
-                    <p class="price">$20.00</p>
+                    <p class="price">$4.99</p>
                   </div>
                 </div>
               </div>
