--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
           <div class="col-9 col-md-9">
             <div class="gm-box">
               <div class="gmb-contact">
-                <p>Call Now: <a href="tel:8883875000">888.387.8888</a></p>
+                <p>Call Now: <a href="tel:+12093198189">+1(209) 319-8189</a></p>
               </div>
               <div class="dfoody-menu-wrapper">
                 <!-- Mobile menu toggle button (hamburger/x icon) -->
@@ -275,7 +275,7 @@
               <h3>Our Story</h3>
             </div>
             <p>
-              Dfoody is a place where cooked food is sold to the public, and
+              Dosa Biryanizz is a place where cooked food is sold to the public, and
               where people sit down to eat it. It is also a place where people
               go to enjoy the time and to eat a meal. Some restaurants are a
               chain, meaning that there are restaurants which have the same
