--- a/foodmenu.html
+++ b/foodmenu.html
@@ -388,7 +388,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/samosa.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Samosa (3 PCs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -407,7 +407,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/punugulu.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Punugulu</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -426,7 +426,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/StuffedMirchi.JPG" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Stuffed Mirchi</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -445,7 +445,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/onion samosa.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Onion Samosa (4 Pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -464,7 +464,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/OnionPakora.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Onion Pakora</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -483,7 +483,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/MadrasChicken65.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Madras Chicken 65</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -502,7 +502,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/ChilliChicken.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chilli Chicken</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -521,7 +521,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/chillipaneer.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chilli Paneer</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -540,7 +540,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/MirchiBhajji.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Mirchi Bhajji (4 Pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -559,7 +559,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/GobiManchurian.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Gobi Manchurian</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -578,7 +578,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/ChickenLollipop.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chicken Lollipop</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -597,7 +597,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/TandooriChickenLeg.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Tandoori Chicken Leg (2 Pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -616,7 +616,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/fishpakoda.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Fish Pakora</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -654,7 +654,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/Meduvada.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Medhu Vada (3 pcs)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
