--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <a href="contact.html">Contact</a>
                   </li>
                   <li>
-                    <a class="btn btn-primary" href="contact.html" role="button">Order Now</a>
+                    <a class="btn btn-primary" href="tel:+12093198189" role="button">Order Now</a>
                   </li>
                   <!-- <li>
                     <a href="blog.html">Blog</a>
@@ -274,23 +274,23 @@
     <div>
       <div id="slideshow">
         <div>
-          <img class="himg" src="./assets/slides/1b.png" />
+          <img class="himg" src="./assets/slides/6a.png" />
         </div>
         <div>
           <img class="himg" src="./assets/slides/2a.png" />
         </div>
-        <div>
+        <!-- <div>
           <img class="himg" src="./assets/slides/3a.png" />
-        </div>
+        </div> -->
         <div>
           <img class="himg" src="./assets/slides/4a.png" />
         </div>
-        <div>
+        <!-- <div>
           <img class="himg" src="./assets/slides/6a.png" />
-        </div>
-        <div>
+        </div> -->
+        <!-- <div>
           <img class="himg" src="./assets/slides/7b.png" />
-        </div>
+        </div> -->
       </div>
       <!-- <div id="slideshow">
           <div class="hero-content">
@@ -507,9 +507,6 @@
                                 <h4>Crispy Cheese dosa</h4>
                                 <p></p>
                               </div>
-                              <div>
-                                <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
-                              </div>
                               <div class="dfsl-price">
                                 <h3><span>$</span>8.99</h3>
                               </div>
@@ -520,9 +517,6 @@
                               <div class="dftsl-text">
                                 <h4>Paneer dosa</h4>
                                 <p></p>
-                              </div>
-                              <div>
-                                <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
                               </div>
                               <div class="dfsl-price">
                                 <h3><span>$</span>8.99</h3>
@@ -535,9 +529,7 @@
                                 <h4>Set dosa (2)</h4>
                                 <p></p>
                               </div>
-                              <div>
-                                <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
-                              </div>
+
                               <div class="dfsl-price">
                                 <h3><span>$</span>7.99</h3>
                               </div>
@@ -549,9 +541,7 @@
                                 <h4>Ghee Roast dosa</h4>
                                 <p></p>
                               </div>
-                              <div>
-                                <i class="fa fa-cart-plus" aria-hidden="true" style="font-size: 30px"></i>
-                              </div>
+
                               <div class="dfsl-price">
                                 <h3><span>$</span>8.99</h3>
                               </div>
