--- a/foodmenu.html
+++ b/foodmenu.html
@@ -683,7 +683,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/BhelPuri.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Bhel Puri</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -702,7 +702,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/samosa.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Samosa Chaat</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -721,7 +721,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/DahiPapdiChaat.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Dahi Papdi chaat</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -740,7 +740,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/panipuri.jpeg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Pani puri</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -759,7 +759,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/pavbhaji.png" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Pav Bhaji</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -778,7 +778,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/VadaPav.JPG" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Vad paav</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -797,7 +797,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/vegmomos.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Veg Everest Momos</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -845,7 +845,7 @@
                           <li class="veg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/chittorkaram.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chitoor Karam Dosa</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1234,7 +1234,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/ChickenBiryani.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chicken Dum Biryani</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
