--- a/foodmenu.html
+++ b/foodmenu.html
@@ -1253,7 +1253,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/Chicken65Biryani.jpg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Chicken 65 Biryani</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
@@ -1272,7 +1272,7 @@
                           <li class="nveg">
                             <div class="dft-single-list">
                               <div class="dft-row-align-left">
-                                <img src="assets/img/food-menu/lunch-1.jpg" class="dft-image" alt="" />
+                                <img src="assets/img/food-menu/mutton.jpeg" class="dft-image" alt="" />
                                 <div class="dftsl-text">
                                   <h4>Mutton Dum Biryani (Fri - Sun)</h4>
                                   <!--  <p>Bread recipes for snacks or breakfast. </p> -->
