--- a/index.html
+++ b/index.html
@@ -888,13 +888,13 @@
               <div class="item">
                 <div class="single-food-box">
                   <div class="sfb-img">
-                    <img src="assets/img/food-menu/rasmalai.jpg" alt="" />
+                    <img src="assets/img/food-menu/GulabJamun.jpg" alt="" />
                     <div class="sfbi-btn">
                       <a href="#" class="add-cart-btn">Order Now</a>
                     </div>
                   </div>
                   <div class="sbf-info">
-                    <h4>Rasmalai 4(pcs)</h4>
+                    <h4>Gulab jamun (4 pcs)</h4>
                     <ul class="sbfi-ratings">
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
