--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     </div>
                   </div>
                   <div class="sbf-info">
-                    <h4>Dosa</h4>
+                    <h4>Masala Dosa</h4>
                     <ul class="sbfi-ratings">
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
@@ -435,7 +435,7 @@
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                       <li><i class="fa fa-star" aria-hidden="true"></i></li>
                     </ul>
-                    <p class="price">$7.99</p>
+                    <p class="price">$8.99</p>
                   </div>
                 </div>
               </div>
