--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 
 <body>
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <!-- Header Area -->
   <header class="header-area dfoody-header dfdV2">
