--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 </head>
 
 <body>
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <!-- Header Area -->
   <header class="header-area dfoody-header dfdV2 ipHeader">
