--- a/blog-2.html
+++ b/blog-2.html
@@ -62,7 +62,7 @@
 </head>
 
 <body>
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <!-- Header Area -->
   <header class="header-area dfoody-header dfdV2 ipHeader">
