--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
           <div class="booking-form">
             <img src="assets/img/bg/booking-form-bg.jpg" alt="" class="bform-bg" />
             <div class="section-titleV2">
-              <h3>Make A reservation</h3>
+              <h3>Contact Us</h3>
               <p>You can call us directly at +1(209) 319-8189</p>
             </div>
             <div class="bform">
